Changed css for <FullImage> to old code to try and fix iPhone stretching issue (might have to get rid of full-image-figure div)

--- a/client/src/components/FullImage/style.css
+++ b/client/src/components/FullImage/style.css
@@ -10,20 +10,21 @@
 
 @keyframes throwImage {
     from {
-        transform: translateY(-100%);
+        top: -100%;
         opacity: 0;
     }
 
     to {
-        transform: none;
+        top: 50%;
+        /* transform: none; */
         opacity: 1;
     }
 }
 
 #full-image-box {
     position: fixed;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     /* align-items: center; */
     top: 0;
     bottom: 0;
@@ -36,13 +37,12 @@
 }
 
 #full-image-figure {
-    position: relative;
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-    max-height: 100%;
+    width: 100%;
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* flex: 1; */
+    height: 100%;
     overflow-y: hidden;
     text-align:center;
     background-repeat: no-repeat;
@@ -51,10 +51,10 @@
 }
 
 #full-image {
-    /* position: absolute;
+    position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
-    left: 50%; */
+    left: 50%;
     z-index:11;
     /* margin: 0 auto; */
     animation-name: throwImage;
